--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context="id.todo.ui.MainActivity">
 
-    <android.support.v7.widget.Toolbar
+    <!--<android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:background="#6200ea"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"/>-->
 
     <ListView
-        android:layout_below="@+id/toolbar"
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
